<?xml version="1.0"?>
<package>
  <name>openni2_camera</name>
  <version>0.0.1</version>
  <description>Access a camera using OpenNI2</description>

  <maintainer email="kai@kaifranke.com">Kai Franke</maintainer>
  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>roscpp</build_depend>
  <build_depend>roslib</build_depend> 
  <build_depend>sensor_msgs</build_depend>
	<build_depend>cv_bridge</build_depend>
	<build_depend>image_transport</build_depend>

  <run_depend>roscpp</run_depend>
  <run_depend>roslib</run_depend>
  <run_depend>sensor_msgs</run_depend>
	<run_depend>cv_bridge</run_depend>
	<run_depend>image_transport</run_depend>

</package>
